Use my shared bash scripts to build the package with docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: minimal
 services:
   - docker
 script:
-  - /bin/bash docker.sh
+  - /bin/bash build.sh
 deploy:
   provider: pages
   skip-cleanup: true
